# pymapvxl

./: .editorconfig  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
bindings/: libmapvxl.pyx  libmapvxl_h.pxd
tests/libmapvxl/: test_initial_state.py  test_invalid.py  test_place_block.py
